# claude

./: CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: test.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_review_fixes.py
backend/app/: config.py  db.py  deps.py  limiter.py  main.py  schemas.py  security.py
backend/app/api/: auth.py  queues.py  tickets.py  ws.py
backend/app/models/: __init__.py  business.py  queue.py  ticket.py
backend/app/services/: notify.py  queue_service.py  ws_manager.py
backend/tests/: conftest.py  test_auth.py  test_notify.py  test_queues.py  test_tickets.py  test_ws.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/[queueId]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/q/[queueId]/: page.tsx
frontend/app/setup/: page.tsx
frontend/app/t/[ticketId]/: page.tsx
frontend/components/: LocaleSwitcher.tsx  QRCode.tsx  QueueCard.tsx  TicketList.tsx
frontend/hooks/: useDashboardSocket.ts  useQueueSocket.ts
frontend/lib/: api.ts  auth.ts  auth.tsx  i18n.tsx  types.ts
frontend/public/: manifest.json
frontend/tests/: api.test.ts  auth.test.tsx  i18n.test.tsx  setup.ts  useQueueSocket.test.tsx
